Fix alignment issues with errors

--- a/menu-drawer.css
+++ b/menu-drawer.css
@@ -28,10 +28,9 @@
   justify-items: center;
   justify-content: center;
   font-size: 20px;
-  background: #A74482;
+  background: #4a6581;
   padding: 20px;
   top: 0;
-  left: -200px;
   position: absolute;
   z-index: -10;
   opacity: 0%;
